# SudokuSolver

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  baseTechniques.cpp  baseTechniques.h  main.cpp  solver.cpp  solver.h  sudokuSolver  tools.cpp  verifMethods.h
.github/workflows/: deploy.yml
Techniques/: baseTechniques.cpp  baseTechniques.h  singleNaked.cpp  singleNaked.h
Tools/: tools.cpp  tools.h
back/: Dockerfile  go.mod
back/api/: main.go
back/api/engine/: base.go  services.go  singleNaked.go  solver.go  tools.go
engine/: Makefile  cmake_install.cmake  main.cpp  solver.cpp
engine/Techniques/: baseTechniques.cpp  singleNaked.cpp  singleNaked.h
engine/Tools/: verifMethods.cpp
front/: app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml
front/.github/workflows/: deploy.yml
front/api/: SolverAPI.ts
front/components/: HelpModal.vue  Keyboard.vue  Solutions.vue
front/layouts/: default.vue
front/models/: Grid.ts  Solution.ts
front/pages/: index.vue  solver.vue
